tests/invalid/simple/Assign_CompileFail_4.whiley
void f():
     int z
     z = true

